--- a/BlogWebAPI/appsettings.json
+++ b/BlogWebAPI/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DataStorage": {
+    "StorageType": "SQLite",
+    "ConnectionStrings": {
+      "SQLite": "Data Source=C:\\sqlite_db\\BlogPosts.db;",
+      "MsSql": "",
+      "PostgreSQL": ""
+    }
+  }
 }
